<resources>
    <string name="app_name">TripPlannerMaster</string>
    <!--mark section -->
    <string name="stop_alarm">Cancel</string>
    <string name="start_alarm">Start</string>
    <string name="label">Select your Alarm input type from below:</string>
    <string name="later_alarm">Later</string>
    <!-- end mark section-->


    <!--bodour section -->
    <string name="title_activity_add_new_trip">Add New Trip</string>
    <string name="tripNameHint">Trip Name</string>
    <string name="AppNameKey">Triplanno</string>
    <string name="StartPointHint">Start Point</string>
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>
    <string name="EndPointValue">End Point</string>
    <string name="TripNamehint">Trip Name</string>
    <string name="StartPointhint">Start Point</string>
    <string name="EndPointhint">End Point</string>
    <string name="DateValue">Date</string>
    <string name="TimeValue">Time</string>
    <string name="DateText">Date</string>
    <string name="TimeText">Time</string>
    <string name="TripTypeValue">Trip Type</string>
    <string name="OneDirectionKey">One Direction</string>
    <string name="RoundKey">Round</string>
    <string name="TripCatValue">Trip Catagory</string>
    <string name="Schoolkey">School</string>
    <string name="WorkValue">other</string>
    <string name="NoteKey">Note List :</string>
    <string name="NoteListkey">Note List :</string>
    <string name="TripCatKey">Trip Catagory</string>
    <string name="NodeListKey">Node List :</string>
    <string name="AddNoteKey">Add Note....</string>
    <string name="SaveIdKey">Save</string>
    <string name="CanclebuttonKey">Cancle</string>
    <string name="AddnoteKey">Add Note....</string>
    <string name="TripDisc">Trip Description</string>
    <string name="RoundTripKey">Round Trip</string>
    <string name="TroipDesc">Trip Description</string>
    <string name="title_activity_update_trip">UpdateTrip</string>
    <string name="title_activity_x">x</string>
    <string name="UpdateKey">Update</string>
    <string name="NoteListMap">Note List :</string>
    <!-- end bodour section-->


    <!--hesham section -->
    <string name="tripTitle">trip title</string>
    <string name="buttonStart">"start "</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="nav_item_home">Up Comming Trips</string>
    <string name="nav_item_friends">History Trips</string>
    <string name="nav_item_history_trip">History Trips map</string>
    <string name="nav_item_notifications">Log out</string>
    <string name="title_home">Home</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>



<string name="StartTrip">start trip</string>
    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_history_trip</item>
        <item>@string/nav_item_notifications</item>
    </string-array>
    <!-- end hesham section-->


    <!--hanaa section -->
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="or">or</string>
    <string name="facebook_app_id">180984762703989</string>
    <string name="fb_login_protocol_scheme">fb180984762703989</string>
    <string name="tripDescription">Description</string>
    <string name="tripDirection">Direction</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="TitileKey">Add New Trip</string>
    <!-- end hanaa section-->


</resources>
