<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/n1"
    tools:context="com.ititeam.tripplannermaster.activity.AddNewTrip">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorAccent"
            app:popupTheme="@style/AppTheme.PopupOverlay">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="50dp"
                android:layout_height="50dp"

                android:layout_alignBottom="@+id/NoteId"
                android:layout_alignEnd="@+id/EditDescription"
                android:layout_alignRight="@+id/EditDescription"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                app:backgroundTint="@color/colorAccent"
                app:srcCompat="@drawable/fab_add" />

            <ImageView
                android:id="@+id/TripName"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="82dp"
                app:srcCompat="@mipmap/name" />

            <AutoCompleteTextView
                android:id="@+id/AutTripName"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/TripName"
                android:layout_marginLeft="61dp"
                android:layout_marginStart="61dp"
                android:layout_toEndOf="@+id/TripName"
                android:layout_toRightOf="@+id/TripName"
                android:hint="@string/TripNamehint" />

            <AutoCompleteTextView
                android:id="@+id/AutoStart"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/AutTripName"
                android:layout_alignStart="@+id/AutTripName"
                android:layout_below="@+id/AutTripName"
                android:layout_marginTop="28dp"
                android:hint="@string/StartPointHint" />

            <AutoCompleteTextView
                android:id="@+id/AutoEnd"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/AutoStart"
                android:layout_alignStart="@+id/AutoStart"
                android:layout_below="@+id/AutoStart"
                android:layout_marginTop="21dp"
                android:hint="@string/EndPointhint" />

            <ImageView
                android:id="@+id/StartPointimage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_above="@+id/AutoEnd"
                android:layout_alignLeft="@+id/TripName"
                android:layout_alignStart="@+id/TripName"
                app:srcCompat="@mipmap/start" />

            <ImageView
                android:id="@+id/EndPointImage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignBottom="@+id/AutoEnd"
                android:layout_alignEnd="@+id/StartPointimage"
                android:layout_alignRight="@+id/StartPointimage"
                app:srcCompat="@mipmap/start" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignLeft="@+id/EndPointImage"
                android:layout_alignStart="@+id/EndPointImage"
                android:layout_below="@+id/EndPointImage"
                android:layout_marginTop="33dp"
                app:srcCompat="@drawable/edit" />

            <EditText
                android:id="@+id/EditDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imageView2"
                android:layout_alignLeft="@+id/AutoEnd"
                android:layout_alignStart="@+id/AutoEnd"
                android:ems="10"
                android:hint="@string/TroipDesc"
                android:inputType="textMultiLine" />

            <ImageView
                android:id="@+id/CalenderImage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignLeft="@+id/imageView2"
                android:layout_alignStart="@+id/imageView2"
                android:layout_below="@+id/imageView2"
                android:layout_marginLeft="6dp"
                android:layout_marginStart="6dp"
                android:layout_marginTop="40dp"
                app:srcCompat="@mipmap/calender" />

            <TextView
                android:id="@+id/Date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/CalenderImage"
                android:layout_toLeftOf="@+id/fab"
                android:layout_toStartOf="@+id/fab"
                android:text="@string/DateValue"
                android:textColor="@color/common_google_signin_btn_text_dark_focused" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignLeft="@+id/CalenderImage"
                android:layout_alignStart="@+id/CalenderImage"
                android:layout_below="@+id/Date"
                android:layout_marginTop="39dp"
                app:srcCompat="@mipmap/clock" />

            <TextView
                android:id="@+id/Time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/TimeText"
                android:layout_alignBottom="@+id/TimeText"
                android:layout_alignEnd="@+id/Date"
                android:layout_alignRight="@+id/Date"
                android:text="@string/TimeValue"
                android:textColor="@color/common_google_signin_btn_text_dark_focused" />

            <TextView
                android:id="@+id/TimeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/AutoEnd"
                android:layout_alignStart="@+id/AutoEnd"
                android:layout_alignTop="@+id/imageView"
                android:text="@string/TimeText" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/imageView"
                android:layout_alignStart="@+id/imageView"
                android:layout_below="@+id/imageView"
                android:layout_marginTop="34dp"
                android:text="@string/TripTypeValue"
                android:textColor="@color/common_google_signin_btn_text_dark_focused" />

            <RadioGroup
                android:id="@+id/GroupType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView5"
                android:layout_toEndOf="@+id/TripCat"
                android:layout_toRightOf="@+id/TripCat"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/imageView"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:checked="true"
                    android:text="@string/OneDirectionKey" />

                <RadioButton
                    android:id="@+id/Round"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/RoundTripKey" />
            </RadioGroup>

            <Spinner
                android:id="@+id/TripCatId"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/fab"
                android:layout_alignRight="@+id/fab"
                android:layout_alignTop="@+id/TripCat"
                android:entries="@string/WorkValue" />

            <TextView
                android:id="@+id/TripCat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView5"
                android:layout_alignStart="@+id/textView5"
                android:layout_below="@+id/GroupType"
                android:layout_marginTop="38dp"
                android:text="@string/TripCatKey"
                android:textColor="@color/common_google_signin_btn_text_dark_focused" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/TripCat"
                android:layout_alignStart="@+id/TripCat"
                android:layout_below="@+id/TripCatId"
                android:layout_marginTop="20dp"
                android:text="@string/NodeListKey"
                android:textColor="@color/common_google_signin_btn_text_dark_focused" />

            <MultiAutoCompleteTextView
                android:id="@+id/NoteId"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView"
                android:layout_alignStart="@+id/textView"
                android:layout_below="@+id/textView"
                android:layout_marginTop="22dp"
                android:hint="@string/AddnoteKey" />


            <Button
                android:id="@+id/CancleId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/SaveId"
                android:layout_alignBottom="@+id/SaveId"
                android:layout_alignEnd="@+id/fab"
                android:layout_alignRight="@+id/fab"
                android:background="@color/colorAccent"
                android:onClick="cancleClick"
                android:text="@string/CanclebuttonKey"
                android:textColor="@color/cardview_light_background" />

            <TextView
                android:id="@+id/DateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/Date"
                android:layout_alignBottom="@+id/Date"
                android:layout_alignLeft="@+id/EditDescription"
                android:layout_alignStart="@+id/EditDescription"
                android:text="@string/DateText" />

            <Button
                android:id="@+id/SaveId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/TripCat"
                android:layout_alignRight="@+id/TripCat"
                android:layout_below="@+id/includeAdd"
                android:layout_marginTop="10dp"
                android:background="@color/colorAccent"
                android:onClick="onClicksave"
                android:text="@string/SaveIdKey"
                android:textColor="@color/cardview_light_background" />

            <include
                android:id="@+id/includeAdd"
                layout="@layout/add_trip_list"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_alignLeft="@+id/SaveId"
                android:layout_alignStart="@+id/SaveId"
                android:layout_below="@+id/fab"
                android:layout_marginTop="6dp" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
