<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.ititeam.tripplannermaster.activity.alarmhandler.AlarmActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:text="@string/label"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/start_alarm_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:background="@drawable/my_button_dessign"
        android:text="@string/start_alarm"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/stop_alarm_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/start_alarm_button"
        android:layout_alignStart="@+id/start_alarm_button"
        android:layout_below="@+id/start_alarm_button"
        android:layout_marginTop="34dp"
        android:background="@drawable/my_button_dessign"
        android:text="@string/stop_alarm"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/later_alarm_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/stop_alarm_button"
        android:layout_alignStart="@+id/stop_alarm_button"
        android:layout_below="@+id/stop_alarm_button"
        android:layout_marginLeft="6dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="43dp"
        android:background="@drawable/my_button_dessign"
        android:text="@string/later_alarm"
        android:textColor="@android:color/white"
        android:textSize="24sp" />
</RelativeLayout>
