<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ititeam.tripplannermaster.activity.login.SignUpFragment">

    <EditText
        android:layout_width="300dp"
        android:layout_height="56dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="92dp"
        android:textColorHint="#8effffff"
        android:paddingEnd="32dp"
        android:background="@drawable/bubble"
        android:gravity="center_vertical"
        android:paddingStart="32dp"
        android:hint="@string/email"
        android:textColor="#ffffff"
        android:drawableLeft="@drawable/ic_user_icon"
        />

    <EditText
        android:layout_width="300dp"
        android:layout_height="56dp"
        android:paddingEnd="32dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@drawable/bubble"
        android:textColorHint="#8effffff"
        android:gravity="center_vertical"
        android:paddingStart="32dp"
        android:hint="@string/password"
        android:textColor="#ffffff"
        android:drawableLeft="@drawable/ic_pass_icon"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/forgot_password"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="#ffffff" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp" />
</LinearLayout>
